@@ -1,3 +1,8 @@
+2015-04-15 Riccardo Mottola <rm@gnu.org>
+
+	* DBSoap.m
+	Catch exceptions in all locked methods and unlock and decrease busy count.
+
 2015-04-14 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoap.h
